name fixed, version 1.5.0

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "minimal-kiwi-clean",
   "displayName": "Minimal Kiwi Clean",
   "description": "VSCode theme based on Minimal Kiwi - A minimalistic, vibrant VSCode theme that harmonizes productivity with the soothing hue of Green Kiwi.",
-  "version": "1.0.0",
+  "version": "1.5.0",
   "publisher": "dynstat",
   "author": {
     "name": "Vivek Singh",
@@ -39,7 +39,7 @@
   "contributes": {
     "themes": [
       {
-        "label": "Minimal Kiwi",
+        "label": "Minimal Kiwi Clean",
         "uiTheme": "vs-dark",
         "path": "./themes/Minimal Kiwi-color-theme.json"
       }
